--- a/jsFundamentals/test.html
+++ b/jsFundamentals/test.html
@@ -3,10 +3,10 @@
 <head>
 	<title>test</title>
 	<script type="text/javascript" src="asdf.js"></script>
-	<script type="text/javascript" src="fdsa.js"</script>
+	<script type="text/javascript" src="fdsa.js"></script>
 </head>
 <body>
-<div>
+	<div>
 	<button onclick="checkTest()">test</button>
 	</div>
 </body>
